# MTAS

./: .gitignore  Cargo.toml  README.md  xmake.lua
.xmake/windows/x64/cache/: detect  history  toolchain
mtas-adb/: Cargo.toml
mtas-adb/src/: lib.rs
mtas-cli/: Cargo.toml
mtas-cli/src/: lib.rs  main.rs
mtas-controler/: Cargo.toml  build.rs
mtas-controler/src/: lib.rs
mtas-controler/src/mumu/: external_renderer_ipc.h  mod.rs  mumu.rs
mtas-controller/: Cargo.toml
mtas-controller/src/: controller.rs  lib.rs
mtas-controller/src/mumu/: mumu.rs
mtas-core/: Cargo.toml
mtas-core/src/: lib.rs  main.rs
mtas-executer/: Cargo.toml
mtas-executer/src/: executer.rs  lib.rs
mtas-executer/src/matcher/: mod.rs
mtas-executer/src/matcher/mt/: mod.rs
mtas-gui/: Cargo.toml
mtas-gui/src/: main.rs
mtas-logger/: Cargo.toml
mtas-logger/src/: lib.rs
mtas-macro/: Cargo.toml
mtas-platform/: Cargo.toml
mtas-platform/src/: lib.rs
mtas-tui/: Cargo.toml
mtas-tui/src/: main.rs
mtas-utils/: Cargo.toml
utils/: Cargo.toml
