[profile.release]
codegen-units = 1
lto           = true
panic         = "abort"
strip         = true

[workspace]
resolver = "2"
members = [
    "mtas-macro",
    "mtas-utils",
    "mtas-logger",
    "mtas-controller",
    "mtas-executer",
    "mtas-cli",
    "mtas-tui",
    "mtas-gui",
]

[workspace.dependencies]
anyhow = "1.0.100"
tokio = "1.47.1"
tracing = "0.1"
image = "0.25"
imageproc = "0.25"
