[package]
name = "mtas-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = [ "wenjiu <27843087979@qq.com>" ]

[dependencies]
mtas-controller = { path = "../mtas-controller" }
mtas-executer = { path = "../mtas-executer" }
mtas-macro = { path = "../mtas-macro" }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
