[package]
name = "mtas-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = [ "wenjiu <27843087979@qq.com>" ]

[dependencies]
mtas-macro = { path = "../mtas-macro" }
mtas-logger = { path = "../mtas-logger" }
mtas-controller = { path = "../mtas-controller" }
mtas-executer = { path = "../mtas-executer" }

tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
