[package]
name = "mtas-controller"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = [ "wenjiu <27843087979@qq.com>" ]

[dependencies]
mtas-macro = { path = "../mtas-macro" }

tokio = { workspace = true, features = ["full", "tracing"] }
tracing = { workspace = true }
anyhow = { workspace = true }

image = { workspace = true }
libloading = "0.8.9"
triple_buffer = "8.1.1"
ringbuf = "0.4.8"

[dev-dependencies]
mtas-logger = { path = "../mtas-logger" }
minifb = "0.28.0"
bytemuck = "1.23.2"

[build-dependencies]
bindgen = "0.72.1"

# I don't know if there is a better way
[lints.rust]
unsafe_op_in_unsafe_fn = "allow"
non_camel_case_types = "allow"
non_snake_case = "allow"
