[package]
name = "mtas-executer"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = [ "wenjiu <27843087979@qq.com>" ]

[dependencies]
mtas-macro = { path = "../mtas-macro" }
mtas-controller = { path = "../mtas-controller" }
anyhow = { workspace = true }
tokio = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
async-compression = { workspace = true, features = ["zstd"] }
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
