[package]
name = "mtas-executer"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = [ "wenjiu <27843087979@qq.com>" ]

[dependencies]
mtas-macro = { path = "../mtas-macro" }
mtas-controller = { path = "../mtas-controller" }

tokio = { workspace = true, features = ["full", "tracing"] }
tracing = { workspace = true }
thiserror = { workspace = true }

image = { workspace = true }
imageproc = { workspace = true }
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
dssim-core = "3.4.0"
rgb = "0.8.52"

[dev-dependencies]
anyhow = { workspace = true }
mtas-logger = { path = "../mtas-logger" }
