[package]
name = "mtas-tui"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = [ "wenjiu <27843087979@qq.com>" ]

[dependencies]
mtas-macro = { path = "../mtas-macro" }
mtas-logger = { path = "../mtas-logger" }
mtas-cli = { path = "../mtas-cli" }

tokio = { workspace = true, features = ["full", "tracing"] }
tracing = { workspace = true }
anyhow = { workspace = true }
